<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pokemonDetail.PokemonDetail">


    <TextView
        android:id="@+id/tvPokemonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ivPokemon"
        android:layout_margin="5dp"
        tools:text="PokemonName"
        android:fontFamily="@font/ubuntu_bold"
        />

    <ImageView
        android:id="@+id/ivPokemon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tvPokemonName"
        android:contentDescription="@string/pokemon"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTypes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPokemon"
        android:layout_margin="5dp"
        android:paddingStart="35dp"
        android:paddingEnd="5dp"
        />

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvTypes"
        app:layout_constraintStart_toEndOf="@+id/tvHeight"
        android:textAlignment="center"
        tools:text="@string/weight"
        android:layout_margin="10dp"
        android:fontFamily="@font/ubuntu_bold"
        />

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvWeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvTypes"
        android:textAlignment="center"
        tools:text="@string/height"
        android:layout_margin="10dp"
        android:fontFamily="@font/ubuntu_bold"
        />

    <LinearLayout
        android:id="@+id/LLStatsGraphics"
        android:layout_width="0dp"
        android:layout_height="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeight"
        android:orientation="horizontal"
        android:gravity="bottom|center"
        android:layout_marginTop="10dp"
        >

        <View
            android:id="@+id/viewHP"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:background="@color/colorHP"
            android:layout_weight="1"
            />

        <View
            android:id="@+id/viewAttack"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:background="@color/colorAttack"
            android:layout_weight="1"
            />

        <View
            android:id="@+id/viewDefense"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:background="@color/colorDefense"
            android:layout_weight="1"
            />

        <View
            android:id="@+id/viewSpeAttack"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:background="@color/colorSpeAttack"
            android:layout_weight="1"
            />

        <View
            android:id="@+id/viewSpeDefense"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:background="@color/colorSpeDefense"
            android:layout_weight="1"
            />

        <View
            android:id="@+id/viewSpeed"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:background="@color/colorSpeed"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNumberStats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLStatsGraphics"
        android:gravity="top|center"
        >
        <TextView
            android:id="@+id/tvHp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="N°"
            style="@style/tvStyleStats"
            android:layout_weight="1"

            />

        <TextView
            android:id="@+id/tvAttack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="N°"
            style="@style/tvStyleStats"
            tools:ignore="Suspicious0dp"
            />

        <TextView
            android:id="@+id/tvDefense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="N°"
            style="@style/tvStyleStats"
            tools:ignore="Suspicious0dp"
            />

        <TextView
            android:id="@+id/tvSpeAttack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="N°"
            style="@style/tvStyleStats"
            android:ellipsize="marquee"
            tools:ignore="Suspicious0dp"
            />

        <TextView
            android:id="@+id/tvSpeDefense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="N°"
            style="@style/tvStyleStats"
            android:ellipsize="marquee"
            tools:ignore="Suspicious0dp"
            />

        <TextView
            android:id="@+id/tvSpeed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="N°"
            style="@style/tvStyleStats"
            tools:ignore="Suspicious0dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llNumberStats"
        android:gravity="top|center"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/statHP"
            style="@style/tvStyleStats"
            android:layout_weight="1"

            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/statAttack"
            style="@style/tvStyleStats"
            tools:ignore="Suspicious0dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/statDefense"
            style="@style/tvStyleStats"
            tools:ignore="Suspicious0dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/statSpeAttack"
            style="@style/tvStyleStats"
            android:ellipsize="marquee"
            tools:ignore="Suspicious0dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/statSpeDefense"
            style="@style/tvStyleStats"
            android:ellipsize="marquee"
            tools:ignore="Suspicious0dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/statSpeed"
            style="@style/tvStyleStats"
            tools:ignore="Suspicious0dp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvPokemonName" />


</androidx.constraintlayout.widget.ConstraintLayout>